# aCoral-riscv-cl

./: .gitignore  CMakeLists.txt
cmake/: common.cmake  executable.cmake  fix-mingw.cmake  link-flags.cmake  toolchain.cmake
example/: convert.sh  package.py  package.sh
example/20classes_yolo/: 20classes_yolo.kfpkg  flash-list.json
example/iris/: flash-list.json  iris.kfpkg  iris.kmodel
example/iris/iris_data/: iris_tflite2kmodel.ps1  tflite2kmodel.py
example/mnist/: convert_to_raw.py  flash-list.json  image_merge.py  mnist.kfpkg  mnist.kmodel  mnist.tflite  mnist_k210.kmodel  mnist_k210.tflite  package.py  test_kmodel.py
example/mnist/备份/: mnist.kfpkg  mnist.tflite  mnist_k210.tflite  mnist_tflite2kmodel.ps1
example/备份/convert/: convert.py  test.py  tt.py
src/aCoral-kernel/include/: acoral.h  types.h
src/aCoral-kernel/include/fs/: fatfs.h  fs.h
src/aCoral-kernel/src/fs/: CMakeLists.txt  fatfs_port.c  fs.c
src/aCoral-kernel/src/user/: user.c
src/aCoral-kernel/src/user/ai/: test_face.c  test_iris.c  test_iris_2.c  test_kmodel.c  test_mnist.c  test_mnist2.c  tt.c  tt2.c
src/aCoral-kernel/src/user/include/: user.h
